# pylotlight

./: Dockerfile.api  Dockerfile.worker  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  test_log_events.py
docker/: Dockerfile.api  Dockerfile.ui
scripts/: test_log_ingestion.sh
src/pylotlight/: alembic.ini  config.py
src/pylotlight/alembic/: env.py
src/pylotlight/alembic/versions/: 2a87c9b679ad_initial_migration.py  65c9d218a1c4_initial_migration.py
src/pylotlight/api/: main.py  openapi_spec.yaml  routes.py
src/pylotlight/backend/: api.py  external.py
src/pylotlight/backend/integrations/: airflow.py
src/pylotlight/core/: sse_handler.py
src/pylotlight/database/: session.py
src/pylotlight/database/models/: log_event.py
src/pylotlight/hooks/: airflow_hook.py  base_hook.py
src/pylotlight/queue/: worker.py
src/pylotlight/schemas/: log_events.py  log_ingestion_api_spec.yaml
src/pylotlight/sources/: __init__.py  airflow.py  base.py  dbt.py
src/pylotlight/ui/: app.py  basic.py  package-lock.json  package.json
src/pylotlight/ui/src/app/dashboard/: page.tsx
src/pylotlight/ui/src/components/: dashboard.tsx
src/pylotlight/worker/: task.py  task_queue.py  worker.py
tests/: test_data_ingestion.py  test_integrations.py  test_ui_components.py
